refactor code
refactor some code about unnecessary objects